--- a/css/style.css
+++ b/css/style.css
@@ -1127,32 +1127,35 @@ ul.scroll-list {
 	-webkit-border-radius: 50%;
 	border-radius: 50%;
 	box-shadow: 0px 0px 0px 8px rgba(235,4,120,1);
-	background-image: url(../images/article_roadtrip/map_1.jpg);
 	transition: all .5s ease-in-out;
 }
 
-.circle-bg-2 {
-	background-image: url(../images/article_roadtrip/map_2.jpg);
-}
-
-.circle-bg-3 {
-	background-image: url(../images/article_roadtrip/map_3.jpg);
-}
-
-.circle-bg-4 {
-	background-image: url(../images/article_roadtrip/map_4.jpg);
-}
-
-.circle-bg-5 {
-	background-image: url(../images/article_roadtrip/map_5.jpg);
+.circle-bg-7 {
+	background-image: url(../images/article_roadtrip/map_7.jpg);
 }
 
 .circle-bg-6 {
 	background-image: url(../images/article_roadtrip/map_6.jpg);
 }
 
-.circle-bg-7 {
-	background-image: url(../images/article_roadtrip/map_7.jpg);
+.circle-bg-5 {
+	background-image: url(../images/article_roadtrip/map_5.jpg);
+}
+
+.circle-bg-4 {
+	background-image: url(../images/article_roadtrip/map_4.jpg);
+}
+
+.circle-bg-3 {
+	background-image: url(../images/article_roadtrip/map_3.jpg);
+}
+
+.circle-bg-2 {
+	background-image: url(../images/article_roadtrip/map_2.jpg);
+}
+
+.circle-bg-1 {
+	background-image: url(../images/article_roadtrip/road_map_1.gif);
 }
 
 /* Camp CA/Listicle Styles */
