First Map Zoom Done
Vector Pattern Added

--- a/css/style.css
+++ b/css/style.css
@@ -1151,7 +1151,19 @@ ul.scroll-list {
 }
 
 .circle-bg-2 {
-	background-image: url(../images/article_roadtrip/map_2.jpg);
+	background-image: url(../images/article_roadtrip/road_map_2.gif);
+}
+
+.circle-bg-1c {
+	background-image: url(../images/article_roadtrip/road_map_1c.gif);
+}
+
+.circle-bg-1b {
+	background-image: url(../images/article_roadtrip/road_map_1b.gif);
+}
+
+.circle-bg-1a {
+	background-image: url(../images/article_roadtrip/road_map_1a.gif);
 }
 
 .circle-bg-1 {
@@ -1169,7 +1181,7 @@ ul.scroll-list {
 }
 
 #article-eats #taco {
-	width: 100%;
+	width: 50%;
 	margin-top: -65%;
 }
 
