--- a/css/style.css
+++ b/css/style.css
@@ -1171,7 +1171,7 @@ ul.scroll-list {
 }
 
 .circle-bg-3 {
-	background-image: url(../images/article_roadtrip/map_3.jpg);
+	background-image: url(../images/article_roadtrip/road_map_3.gif);
 }
 
 .circle-bg-2 {
