--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ body {
 	bottom: -1px;
 	width: 100%;
 	height: 4px;
-	background-color: rgba(235,4,120,1);
+	background-color: rgba(255,255,255,1);
 }
 
 .nav-status-bar {
@@ -240,7 +240,7 @@ body {
 	bottom: -1px;
 	width: 0%;
 	height: 4px;
-	background-color: rgba(250,192,221,1);
+	background-color: rgba(235,4,120,1);
 	transition: width 1s ease-in-out;
 }
 
@@ -1108,19 +1108,19 @@ ul.scroll-list {
 }
 
 .circle-bg-7 {
-	background-image: url(../images/article_roadtrip/map_7.jpg);
+	background-image: url(../images/article_roadtrip/road_map_7.gif);
 }
 
 .circle-bg-6 {
-	background-image: url(../images/article_roadtrip/map_6.jpg);
+	background-image: url(../images/article_roadtrip/road_map_6.gif);
 }
 
 .circle-bg-5 {
-	background-image: url(../images/article_roadtrip/map_5.jpg);
+	background-image: url(../images/article_roadtrip/road_map_5.gif);
 }
 
 .circle-bg-4 {
-	background-image: url(../images/article_roadtrip/map_4.jpg);
+	background-image: url(../images/article_roadtrip/road_map_4.gif);
 }
 
 .circle-bg-3 {
