--- a/css/style.css
+++ b/css/style.css
@@ -1373,37 +1373,45 @@ ul.scroll-list {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-color: #05bbff;
-	width: 950px;
+	width: 1000px;
 	margin: 0 auto 1px;
 	position: relative;
 	text-align: center;
 	overflow: hidden;
 }
 .hideContentWrap .hideContentHeader {
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 400;
-	font-size: 32px;
-	letter-spacing: 3px;
 	background-color: rgba(5,187,255,.8);
-	padding: 25px 25px 22px 25px;
+	padding: 0 75px;
 	position:relative;
 	z-index: 50!important;
 	text-shadow: 0px 2px 4px rgba(0,0,0,.4);
 	transition: all .5s ease-in-out;
+	height: 95px;
+	width: 100%;
+	 display: table; 
 }
-.hideContentWrap .hideContentHeader:hover {
+.hideContentWrap .hideContentHeader h1 {
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-size: 30px;
+	line-height: 32px;
+	letter-spacing: 2px;
+	transition: all .5s ease-in-out;
+	display: table-cell; 
+  vertical-align: middle; 
+  text-align: center;
+}
+.hideContentWrap .hideContentHeader:hover h1 {
 	cursor: pointer;
-	letter-spacing: 4px;
+	letter-spacing: 3px;
 	color: #fff845;
 }
 .hideContentHeader.active {
     background-color: rgba(5,187,255,0);
     text-shadow: 0px 1px 4px rgba(0,0,0,.8);
     color: #fff845;
-}
-.hideContentHeader.active:hover {
-	letter-spacing: 3px;
+    letter-spacing: 3px;
 }
 .hideContentWrap .hideContent {
 	height: 80vh;
@@ -1418,7 +1426,6 @@ ul.scroll-list {
 	margin:0 10px 10px 10px;
 }
 .hideContentWrap .hideContent h4 {
-	/*background-color: rgba(235,4,120,1);*/
 	background-color: rgba(36,52,60,.9);
 	color: #FFF;
 	padding: 8px 40px 4px;
@@ -1427,7 +1434,7 @@ ul.scroll-list {
 	display: inline-block;
 }
 .hideContentWrap .hideContent .text-box p {
-	padding:15px 45px 0px 45px;
+	padding:15px 45px 0px;
 	font-size:17px;
 	line-height:22px;
 	font-weight: 400;
@@ -1440,11 +1447,10 @@ ul.scroll-list {
     font-size: 30px;
     font-weight: 100;
     transition: all .5s ease-in-out;
-    width: 22px; height: 22px;
-    margin-right: 6px;
+    line-height: 95px;
 }
 .indicator img {
-	height: auto;
+	width: 22px; height: 22px;
 }
 .indicator.rotate {
     transform: rotate(45deg);
