--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,7 @@ body {
 	bottom: -1px;
 	width: 100%;
 	height: 4px;
-	background-color: rgba(235,4,120,1);
+	background-color: rgba(255,255,255,1);
 }
 
 .nav-status-bar {
@@ -271,7 +271,7 @@ body {
 	bottom: -1px;
 	width: 0%;
 	height: 4px;
-	background-color: rgba(250,192,221,1);
+	background-color: rgba(235,4,120,1);
 	transition: width 1s ease-in-out;
 }
 
@@ -796,7 +796,6 @@ a.read-more {
 	margin-left: 4%;
 }
 .container-fluid.article .sect-break {
-	/*margin-top: -200px;*/
 	margin-top: -30%;
 }
 .container-fluid.article .under {
@@ -1002,7 +1001,6 @@ a.read-more {
 
 .parralax-credit {
 	position: absolute;
-	z-index: +1;
 	bottom: 1%;
 	right: 2%;
 }
@@ -1075,8 +1073,7 @@ ul.scroll-list {
 }
 
 [class*="parallax-bg__"] {
-/*	height: 100vh;
-*/	position: relative;
+	position: relative;
 	background-attachment: fixed;
 	background-position: center center;
 	background-size: cover;
@@ -1130,9 +1127,7 @@ ul.scroll-list {
 	border-bottom: 1px solid rgba(5,187,255,1);
 	display: table;
 }
-/*.one-line {
-	line-height: 50px;
-}*/
+
 .box-header-num {
 	float: left;
 	font-weight: 900;
@@ -1214,29 +1209,48 @@ ul.scroll-list {
 	transition: all .5s ease-in-out;
 }
 
-.circle-bg-2 {
-	background-image: url(../images/article_roadtrip/map_2.jpg);
-}
-
-.circle-bg-3 {
-	background-image: url(../images/article_roadtrip/map_3.jpg);
-}
-
-.circle-bg-4 {
-	background-image: url(../images/article_roadtrip/map_4.jpg);
-}
-
-.circle-bg-5 {
-	background-image: url(../images/article_roadtrip/map_5.jpg);
+.circle-bg-7 {
+	background-image: url(../images/article_roadtrip/road_map_7.gif);
 }
 
 .circle-bg-6 {
-	background-image: url(../images/article_roadtrip/map_6.jpg);
+	background-image: url(../images/article_roadtrip/road_map_6.gif);
 }
 
-.circle-bg-7 {
-	background-image: url(../images/article_roadtrip/map_7.jpg);
+.circle-bg-5 {
+	background-image: url(../images/article_roadtrip/road_map_5.gif);
 }
+
+.circle-bg-4 {
+	background-image: url(../images/article_roadtrip/road_map_4.gif);
+}
+
+.circle-bg-3 {
+	background-image: url(../images/article_roadtrip/road_map_3.gif);
+}
+
+.circle-bg-2 {
+	background-image: url(../images/article_roadtrip/road_map_2.gif);
+}
+
+.circle-bg-1c {
+	background-image: url(../images/article_roadtrip/road_map_1c.gif);
+}
+
+.circle-bg-1b {
+	background-image: url(../images/article_roadtrip/road_map_1b.gif);
+}
+
+.circle-bg-1a {
+	background-image: url(../images/article_roadtrip/road_map_1a.gif);
+}
+
+.circle-bg-1 {
+	background-image: url(../images/article_roadtrip/road_map_1.gif);
+}
+
+
+
 
 /* Article Eats */
 
@@ -1249,7 +1263,7 @@ ul.scroll-list {
 }
 
 #article-eats #taco {
-	width: 100%;
+	width: 50%;
 	margin-top: -65%;
 }
 
